Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
12.3
-
None
-
Can result in hang or crash
-
Q2/2026 Server Development
Description
CREATE TABLE t1(a XMLTYPE); |
SET @x = CONCAT( REPEAT('<element_with_long_name>', 30), 'leaf', REPEAT('</element_with_long_name>', 30)); |
|
|
SELECT LENGTH(@x); |
INSERT INTO t1 VALUES(@x); |
|
|
DROP TABLE t1; |
***Warnings generated in error logs during shutdown after running tests: main.1_my
|
|
|
Warning: Internal memory accounting error of 1224 bytes
|
==2166595==ERROR: LeakSanitizer: detected memory leaks
|
SUMMARY: AddressSanitizer: 1224 byte(s) leaked in 1 allocation(s).
|
|
Attachments
Issue Links
- is caused by
-
MDEV-39124 XMLTYPE: allow only well-formed XML
-
- Closed
-