MDEV-39570 LeakSanitizer: detected memory leaks after insert with xmltype

XML parser should always be freed.